--- a/jessicaakerman.com/processions.html
+++ b/jessicaakerman.com/processions.html
@@ -10,7 +10,7 @@
 <base href="">
 <meta charset="utf-8" />
 <title>Dazzle ship inspired banner made for Artichoke national artwork, Processions for 14-18 Now. &mdash; Jessica Akerman</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="../images.squarespace-cdn.com/content/v1/570e284d4c2f85f6fd8df7c9/ed3a8005-97ff-4cbf-a1c9-6b7a603642ce/favicon.ico"/>
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="content/v1/570e284d4c2f85f6fd8df7c9/ed3a8005-97ff-4cbf-a1c9-6b7a603642ce/favicon.ico"/>
 <link rel="canonical" href="processions.html"/>
 <meta property="og:site_name" content="Jessica Akerman"/>
 <meta property="og:title" content="Dazzle ship inspired banner made for Artichoke national artwork, Processions for 14-18 Now. &mdash; Jessica Akerman"/>
@@ -35,7 +35,7 @@
 Processions, the national artwork commissioned by Artichoke for 14-18 Now. 
 Inspired by dazzle ships, camouflage and the homemade cardboard armour worn 
 by suffragettes." />
-<link rel="preconnect" href="../images.squarespace-cdn.com/index.html">
+<link rel="preconnect" href="index.html">
 <link rel="preconnect" href="https://use.typekit.net" crossorigin>
 <link rel="preconnect" href="https://p.typekit.net" crossorigin>
 <script type="text/javascript" src="https://use.typekit.net/ik/OF3I8zTo2PFQMH-Jgft_Qi5FbHDBNcHeyBxrwDpxi2bfeGjgfFHN4UJLFRbh52jhWD9awe9k52sqFewkZR6uZRZcZ2yqZRiR5sGMJ68ciWsuScIlSYb7fbKemsMMeMw6MKG4fJsmIMMjgfMfH6qJxubbMg6BJMJ7fbKgmsMMeMS6MKG4fJFmIMMj2PMfH6qJym9bMg65JMJ7fbKfmsMMegI6MTMgaE-vz6j.js"></script>
