--- a/jessicaakerman.com/suffrage-centenary-patches/p8f23y6sk54mppy5vt9a06cemnr18e.html
+++ b/jessicaakerman.com/suffrage-centenary-patches/p8f23y6sk54mppy5vt9a06cemnr18e.html
@@ -10,7 +10,7 @@
 <base href="">
 <meta charset="utf-8" />
 <title>September patch: Irish Women&#39;s Suffrage Federation &mdash; Jessica Akerman</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="../../images.squarespace-cdn.com/content/v1/570e284d4c2f85f6fd8df7c9/ed3a8005-97ff-4cbf-a1c9-6b7a603642ce/favicon.ico"/>
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="../content/v1/570e284d4c2f85f6fd8df7c9/ed3a8005-97ff-4cbf-a1c9-6b7a603642ce/favicon.ico"/>
 <link rel="canonical" href="suffrage-centenary-patches/p8f23y6sk54mppy5vt9a06cemnr18e.html"/>
 <meta property="og:site_name" content="Jessica Akerman"/>
 <meta property="og:title" content="September patch: Irish Women&#39;s Suffrage Federation &mdash; Jessica Akerman"/>
@@ -41,7 +41,7 @@ was aligned to neither the Unionist nor Nationalist cause. However, many
 individual members still found themselves under pressure to take sides on 
 the issue, which remained more urgent in the local consciousness than the 
 parallel fight for universal suffrage." />
-<link rel="preconnect" href="../../images.squarespace-cdn.com/index.html">
+<link rel="preconnect" href="../index.html">
 <link rel="preconnect" href="https://use.typekit.net" crossorigin>
 <link rel="preconnect" href="https://p.typekit.net" crossorigin>
 <script type="text/javascript" src="https://use.typekit.net/ik/OF3I8zTo2PFQMH-Jgft_Qi5FbHDBNcHeyBxrwDpxi2bfeGjgfFHN4UJLFRbh52jhWD9awe9k52sqFewkZR6uZRZcZ2yqZRiR5sGMJ68ciWsuScIlSYb7fbKemsMMeMw6MKG4fJsmIMMjgfMfH6qJxubbMg6BJMJ7fbKgmsMMeMS6MKG4fJFmIMMj2PMfH6qJym9bMg65JMJ7fbKfmsMMegI6MTMgaE-vz6j.js"></script>
